feat: Implement blog

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,8 +40,12 @@ body {
   @apply text-ww-accent underline;
 }
 
+.c-markdown ol {
+  @apply list-decimal list-outside pl-4 my-8;
+}
+
 .c-markdown ul {
-  @apply list-inside list-disc mb-4;
+  @apply list-inside list-disc my-8;
 }
 
 .c-markdown ul li {
